# lookaround-2026

./: .gitignore  CLAUDE.md  app.py  config.py  designdoc.md  download_sun360.sh  eval.py  eval_transfer.py  look_around_paper.md  main.py  plot_fig5.py  pyproject.toml  readme.md  train.py  train_sun360_only.sh
data/: combined.py  patch_labels.py  prepare_modelnet.py  prepare_sun360.py  sun360.py  utils.py
logs/: 0414_design_choice_in_2026.md  0414_training_buglog.md
models/: actor.py  baselines.py  classifier.py  combine.py  completion.py  encoder.py  location.py  memory.py
origin_code/SUN360/outputs/: .gitignore
results/: eval_metrics.json  transfer_metrics.json  transfer_modelnet10.json  transfer_panocontext.json
utils/: logging.py  rewards.py
