[project]
name = "lookaround-2026"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gdown>=5.2.1",
    "gradio>=6.10.0",
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pyrender>=0.1.45",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "tqdm>=4.67.3",
    "trimesh>=4.11.5",
    "wandb>=0.25.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
